--- a/package.json
+++ b/package.json
@@ -921,6 +921,7 @@
     "@kbn/shared-ux-file-util": "link:src/platform/packages/shared/shared-ux/file/util",
     "@kbn/shared-ux-link-redirect-app": "link:src/platform/packages/shared/shared-ux/link/redirect_app/impl",
     "@kbn/shared-ux-link-redirect-app-types": "link:src/platform/packages/shared/shared-ux/link/redirect_app/types",
+    "@kbn/shared-ux-locators": "link:src/platform/packages/shared/shared-ux/locators",
     "@kbn/shared-ux-markdown": "link:src/platform/packages/shared/shared-ux/markdown/impl",
     "@kbn/shared-ux-markdown-types": "link:src/platform/packages/shared/shared-ux/markdown/types",
     "@kbn/shared-ux-page-analytics-no-data": "link:src/platform/packages/private/shared-ux/page/analytics_no_data/impl",
