--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1832,6 +1832,8 @@
       "@kbn/shared-ux-link-redirect-app-mocks/*": ["src/platform/packages/shared/shared-ux/link/redirect_app/mocks/*"],
       "@kbn/shared-ux-link-redirect-app-types": ["src/platform/packages/shared/shared-ux/link/redirect_app/types"],
       "@kbn/shared-ux-link-redirect-app-types/*": ["src/platform/packages/shared/shared-ux/link/redirect_app/types/*"],
+      "@kbn/shared-ux-locators": ["src/platform/packages/shared/shared-ux/locators"],
+      "@kbn/shared-ux-locators/*": ["src/platform/packages/shared/shared-ux/locators/*"],
       "@kbn/shared-ux-markdown": ["src/platform/packages/shared/shared-ux/markdown/impl"],
       "@kbn/shared-ux-markdown/*": ["src/platform/packages/shared/shared-ux/markdown/impl/*"],
       "@kbn/shared-ux-markdown-mocks": ["src/platform/packages/shared/shared-ux/markdown/mocks"],
