This adds a new "managed flyout" service to core.overlays.
A brief description of the API:

Hook usage: components use the core.overlays.useManagedFlyout hook to access the flyout API, which provides methods for managing a flyout instance imperatively.

Common operations:
  - Flyout appearance and navigation is controlled with
    - openFlyout(entry, stateManager)
    - nextFlyout(entry, stateManager)
    - openChildFlyout(entry, stateManager)
  - After navigating from one flyout to another with nextFlyout, you can go back to the previous flyout with goBack()
  - The main app can detect if the flyout is open with isFlyoutOpen() and close the flyout with closeFlyout()

Flyout entry configuration: A flyout is configured using a ManagedFlyoutEntry object with these key properties:
  - renderBody: (required) render function for the flyout's main content
  - renderHeader: (optional) render function for the flyout's header
  - footerActions: (optional) function to return an array of elements to show in the flyout footer (typically buttons)
  - flyoutProps: (optional) function to return EuiFlyoutProps given to the EuiFlyout component controlled by the service
  - each key property is a function that is called with managedFlyoutApi: UseManagedFlyoutApi<StateType>: the flyoutAPI itself

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -26,6 +26,7 @@ examples/hello_world @elastic/kibana-core
 examples/locator_examples @elastic/appex-sharedux
 examples/locator_explorer @elastic/appex-sharedux
 examples/partial_results_example @elastic/kibana-data-discovery
+examples/platform_flyout_example @elastic/kibana-presentation
 examples/portable_dashboards_example @elastic/kibana-presentation
 examples/preboot_example @elastic/kibana-security @elastic/kibana-core
 examples/resizable_layout_examples @elastic/kibana-data-discovery
@@ -567,6 +568,7 @@ src/platform/packages/shared/kbn-zod @elastic/kibana-core
 src/platform/packages/shared/kbn-zod-helpers @elastic/security-detection-rule-management
 src/platform/packages/shared/presentation/presentation_containers @elastic/kibana-presentation
 src/platform/packages/shared/presentation/presentation_publishing @elastic/kibana-presentation
+src/platform/packages/shared/presentation/presentation_publishing_types @elastic/kibana-presentation
 src/platform/packages/shared/react/kibana_context/common @elastic/appex-sharedux
 src/platform/packages/shared/react/kibana_context/render @elastic/appex-sharedux
 src/platform/packages/shared/react/kibana_context/root @elastic/appex-sharedux
