--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1420,6 +1420,8 @@
       "@kbn/performance-testing-dataset-extractor/*": ["packages/kbn-performance-testing-dataset-extractor/*"],
       "@kbn/picomatcher": ["packages/kbn-picomatcher"],
       "@kbn/picomatcher/*": ["packages/kbn-picomatcher/*"],
+      "@kbn/platform-flyout-examples-plugin": ["examples/platform_flyout_example"],
+      "@kbn/platform-flyout-examples-plugin/*": ["examples/platform_flyout_example/*"],
       "@kbn/plugin-check": ["packages/kbn-plugin-check"],
       "@kbn/plugin-check/*": ["packages/kbn-plugin-check/*"],
       "@kbn/plugin-generator": ["packages/kbn-plugin-generator"],
@@ -1436,6 +1438,8 @@
       "@kbn/presentation-panel-plugin/*": ["src/platform/plugins/private/presentation_panel/*"],
       "@kbn/presentation-publishing": ["src/platform/packages/shared/presentation/presentation_publishing"],
       "@kbn/presentation-publishing/*": ["src/platform/packages/shared/presentation/presentation_publishing/*"],
+      "@kbn/presentation-publishing-types": ["src/platform/packages/shared/presentation/presentation_publishing_types"],
+      "@kbn/presentation-publishing-types/*": ["src/platform/packages/shared/presentation/presentation_publishing_types/*"],
       "@kbn/presentation-util-plugin": ["src/platform/plugins/shared/presentation_util"],
       "@kbn/presentation-util-plugin/*": ["src/platform/plugins/shared/presentation_util/*"],
       "@kbn/product-doc-artifact-builder": ["x-pack/packages/ai-infra/product-doc-artifact-builder"],
