--- a/package.json
+++ b/package.json
@@ -739,11 +739,13 @@
     "@kbn/painless-lab-plugin": "link:x-pack/platform/plugins/private/painless_lab",
     "@kbn/palettes": "link:src/platform/packages/shared/kbn-palettes",
     "@kbn/panel-loader": "link:src/platform/packages/private/kbn-panel-loader",
+    "@kbn/platform-flyout-examples-plugin": "link:examples/platform_flyout_example",
     "@kbn/portable-dashboards-example": "link:examples/portable_dashboards_example",
     "@kbn/preboot-example-plugin": "link:examples/preboot_example",
     "@kbn/presentation-containers": "link:src/platform/packages/shared/presentation/presentation_containers",
     "@kbn/presentation-panel-plugin": "link:src/platform/plugins/private/presentation_panel",
     "@kbn/presentation-publishing": "link:src/platform/packages/shared/presentation/presentation_publishing",
+    "@kbn/presentation-publishing-types": "link:src/platform/packages/shared/presentation/presentation_publishing_types",
     "@kbn/presentation-util-plugin": "link:src/platform/plugins/shared/presentation_util",
     "@kbn/product-doc-base-plugin": "link:x-pack/platform/plugins/shared/ai_infra/product_doc_base",
     "@kbn/product-doc-common": "link:x-pack/platform/packages/shared/ai-infra/product-doc-common",
