--- a/src/core/packages/overlays/browser-internal/tsconfig.json
+++ b/src/core/packages/overlays/browser-internal/tsconfig.json
@@ -30,7 +30,8 @@
     "@kbn/core-analytics-browser-mocks",
     "@kbn/core-analytics-browser",
     "@kbn/core-user-profile-browser-mocks",
-    "@kbn/core-user-profile-browser"
+    "@kbn/core-user-profile-browser",
+    "@kbn/presentation-publishing-types"
   ],
   "exclude": [
     "target/**/*"
