--- a/src/core/packages/overlays/browser/tsconfig.json
+++ b/src/core/packages/overlays/browser/tsconfig.json
@@ -12,7 +12,8 @@
     "**/*.ts"
   ],
   "kbn_references": [
-    "@kbn/core-mount-utils-browser"
+    "@kbn/core-mount-utils-browser",
+    "@kbn/presentation-publishing-types"
   ],
   "exclude": [
     "target/**/*",
